--- a/add.html
+++ b/add.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin Panel - ConceptDash</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ConceptDash - Add Item (Admin Only)</title>
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -12,65 +12,63 @@
       theme: {
         extend: {
           colors: {
-            primary: '#16a34a'
+            primary: '#e63946'
+          },
+          borderRadius: {
+            button: '8px'
+          },
+          fontFamily: {
+            pacifico: ['Pacifico', 'cursive']
           }
         }
       }
     }
   </script>
 
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
-
-  <!-- Icons -->
+  <!-- Fonts & Icons -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" />
 </head>
-<body class="bg-gray-100 font-sans">
+
+<body class="bg-gray-50">
 
   <!-- Header -->
-  <header class="fixed top-0 left-0 right-0 bg-white shadow z-50">
+  <header class="fixed top-0 left-0 right-0 bg-white shadow-md z-50">
     <div class="container mx-auto px-4 py-3 flex items-center justify-between">
-      <div class="text-xl font-bold text-primary">ConceptDash</div>
+      <a href="index.html" class="text-xl font-bold text-primary font-pacifico">ConceptDash</a>
       <nav class="flex space-x-6 text-sm items-center">
-        <a href="index.html" class="hover:text-primary">Home</a>
-        <a href="catgry.html" class="hover:text-primary">Categories</a>
-        <a href="#" class="hover:text-primary font-semibold">Add/Manage</a>
-        <a href="cart.html" class="hover:text-primary">Cart</a>
-        <a href="auth.html" class="hover:text-primary">Login</a>
+        <a href="index.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-home-line mr-1"></i>Home</a>
+        <a href="catgry.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-apps-line mr-1"></i>Categories</a>
+        <a href="add.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-add-line mr-1"></i>Add Item</a>
+        <a href="cart.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-shopping-cart-line mr-1"></i>Cart</a>
+        <a href="auth.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-user-line mr-1"></i>Login</a>
       </nav>
     </div>
   </header>
 
   <!-- Main Content -->
-  <main class="pt-24 px-4 max-w-6xl mx-auto space-y-10">
+  <main class="pt-24 px-4 max-w-3xl mx-auto">
+    <!-- Admin Password Section -->
+    <div id="authSection" class="bg-white p-6 rounded shadow text-center">
+      <h2 class="text-xl font-semibold mb-4">🔐 Admin Access Required</h2>
+      <input type="password" id="adminPass" placeholder="Enter admin password" class="border p-2 rounded w-full mb-4" />
+      <button onclick="checkPassword()" class="bg-primary text-white px-4 py-2 rounded-button hover:bg-red-600">Enter</button>
+      <p id="errorMsg" class="text-red-600 text-sm mt-2 hidden">Incorrect password.</p>
+    </div>
 
-    <!-- ADD ITEM -->
-    <section class="bg-white p-6 rounded shadow">
-      <h2 class="text-xl font-bold text-primary mb-4">➕ Add New Item</h2>
-      <form id="addItemForm" class="grid grid-cols-1 md:grid-cols-2 gap-4">
-        <input type="text" id="name" placeholder="Item Name" class="border p-2 rounded" required />
-        <input type="number" id="price" placeholder="Price" class="border p-2 rounded" required />
-        <input type="text" id="category" placeholder="Category" class="border p-2 rounded" required />
-        <input type="url" id="imageUrl" placeholder="Image URL" class="border p-2 rounded" required />
-        <textarea id="description" placeholder="Description" class="md:col-span-2 border p-2 rounded"></textarea>
-        <button type="submit" class="md:col-span-2 bg-primary text-white py-2 px-4 rounded hover:bg-green-700">Add Item</button>
+    <!-- Add Item Form Section -->
+    <div id="addItemForm" class="hidden bg-white p-6 rounded shadow mt-8">
+      <h2 class="text-2xl font-semibold text-gray-800 mb-6">📦 Add New Item</h2>
+      <form>
+        <input type="text" placeholder="Item Name" class="border p-2 rounded w-full mb-4" required />
+        <input type="number" placeholder="Price (KES)" class="border p-2 rounded w-full mb-4" required />
+        <input type="url" placeholder="Image URL" class="border p-2 rounded w-full mb-4" required />
+        <textarea placeholder="Description" class="border p-2 rounded w-full mb-4" rows="3"></textarea>
+        <button type="submit" class="bg-green-600 text-white px-4 py-2 rounded-button hover:bg-green-700">Add Item</button>
       </form>
-      <p id="statusMessage" class="text-sm mt-2 text-center"></p>
-    </section>
-
-    <!-- VIEW + EDIT ITEMS -->
-    <section class="bg-white p-6 rounded shadow">
-      <div class="flex justify-between items-center mb-4 flex-wrap gap-4">
-        <h2 class="text-xl font-bold text-primary">🛠️ Manage Items</h2>
-        <div class="flex gap-2">
-          <input type="text" id="searchInput" placeholder="Search by name..." class="border p-2 rounded shadow-sm" />
-          <button id="viewItemsBtn" class="bg-primary text-white px-4 py-2 rounded hover:bg-green-700">View All</button>
-        </div>
-      </div>
-      <div id="productList" class="space-y-6"></div>
-    </section>
-
+    </div>
   </main>
 
   <!-- Footer -->
@@ -78,138 +76,22 @@
     &copy; 2025 ConceptDash. All rights reserved.
   </footer>
 
-  <!-- Firebase Logic -->
+  <!-- Admin Password Check -->
   <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyAHhmbgDA_D13LcnEWgtr5Unu7uihBpGPE",
-      authDomain: "food-ae7ff.firebaseapp.com",
-      projectId: "food-ae7ff",
-      storageBucket: "food-ae7ff.appspot.com",
-      messagingSenderId: "256095054979",
-      appId: "1:256095054979:web:22de2c16f9acb15f65a08f"
-    };
+    const CORRECT_PASSWORD = "conceptAdmin2025";
 
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+    function checkPassword() {
+      const input = document.getElementById("adminPass").value;
+      const error = document.getElementById("errorMsg");
 
-    // Add Item
-    document.getElementById('addItemForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-
-      const name = document.getElementById('name').value.trim();
-      const price = parseFloat(document.getElementById('price').value);
-      const category = document.getElementById('category').value.trim();
-      const imageUrl = document.getElementById('imageUrl').value.trim();
-      const description = document.getElementById('description').value.trim();
-      const statusMessage = document.getElementById('statusMessage');
-
-      if (!name || isNaN(price) || !category || !imageUrl) {
-        statusMessage.textContent = "❌ Please fill all fields correctly!";
-        statusMessage.className = "text-red-600 text-center";
-        return;
+      if (input === CORRECT_PASSWORD) {
+        document.getElementById("authSection").classList.add("hidden");
+        document.getElementById("addItemForm").classList.remove("hidden");
+      } else {
+        error.classList.remove("hidden");
       }
-
-      try {
-        await db.collection('products').add({ name, price, category, imageUrl, description, timestamp: firebase.firestore.FieldValue.serverTimestamp() });
-        statusMessage.textContent = "✅ Item added successfully!";
-        statusMessage.className = "text-green-600 text-center";
-        document.getElementById('addItemForm').reset();
-      } catch (error) {
-        console.error(error);
-        statusMessage.textContent = "❌ Error adding item!";
-        statusMessage.className = "text-red-600 text-center";
-      }
-    });
-
-    // View + Search + Edit + Delete
-    const viewBtn = document.getElementById("viewItemsBtn");
-    const productList = document.getElementById("productList");
-    const searchInput = document.getElementById("searchInput");
-    let allProducts = [];
-
-    viewBtn.addEventListener("click", fetchProducts);
-    searchInput.addEventListener("input", filterProducts);
-
-    async function fetchProducts() {
-      const snapshot = await db.collection("products").orderBy("timestamp", "desc").get();
-      allProducts = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
-      displayProducts(allProducts);
-    }
-
-    function filterProducts() {
-      const keyword = searchInput.value.toLowerCase();
-      const filtered = allProducts.filter(p => p.name.toLowerCase().includes(keyword));
-      displayProducts(filtered);
-    }
-
-    function displayProducts(products) {
-      productList.innerHTML = "";
-
-      if (products.length === 0) {
-        productList.innerHTML = `<p class="text-gray-500 text-center">No products found.</p>`;
-        return;
-      }
-
-      products.forEach(product => {
-        const div = document.createElement("div");
-        div.className = "bg-gray-50 p-4 rounded shadow";
-
-        div.innerHTML = `
-          <div class="md:flex gap-4">
-            <img src="${product.imageUrl}" alt="${product.name}" class="w-full md:w-48 h-40 object-cover rounded mb-4 md:mb-0" />
-            <div class="flex-1 space-y-2">
-              <input type="text" class="w-full border p-2 rounded" value="${product.name}" data-id="${product.id}" data-field="name" />
-              <textarea class="w-full border p-2 rounded" data-id="${product.id}" data-field="description">${product.description || ""}</textarea>
-              <input type="number" class="w-full border p-2 rounded" value="${product.price}" data-id="${product.id}" data-field="price" />
-              <input type="text" class="w-full border p-2 rounded" value="${product.category}" data-id="${product.id}" data-field="category" />
-              <input type="url" class="w-full border p-2 rounded" value="${product.imageUrl}" data-id="${product.id}" data-field="imageUrl" />
-
-              <div class="flex gap-2 mt-2">
-                <button class="saveBtn bg-primary text-white px-4 py-2 rounded hover:bg-green-700" data-id="${product.id}">Save</button>
-                <button class="deleteBtn bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700" data-id="${product.id}">Delete</button>
-              </div>
-            </div>
-          </div>
-        `;
-
-        productList.appendChild(div);
-      });
-
-      document.querySelectorAll(".saveBtn").forEach(button => {
-        button.onclick = async () => {
-          const id = button.dataset.id;
-          const inputs = document.querySelectorAll(`[data-id="${id}"]`);
-          const updates = {};
-          inputs.forEach(input => {
-            updates[input.dataset.field] = input.value;
-          });
-
-          try {
-            await db.collection("products").doc(id).update(updates);
-            alert("✅ Product updated!");
-          } catch (err) {
-            console.error(err);
-            alert("❌ Failed to update.");
-          }
-        };
-      });
-
-      document.querySelectorAll(".deleteBtn").forEach(button => {
-        button.onclick = async () => {
-          const id = button.dataset.id;
-          if (confirm("Are you sure you want to delete this product?")) {
-            try {
-              await db.collection("products").doc(id).delete();
-              alert("🗑️ Product deleted!");
-              fetchProducts(); // refresh list
-            } catch (err) {
-              console.error(err);
-              alert("❌ Failed to delete.");
-            }
-          }
-        };
-      });
     }
   </script>
+
 </body>
-</html>
+  </html>
