--- a/product.html
+++ b/product.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,12 +32,9 @@
   <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
-
-  <!-- Your CSS -->
-  <link rel="stylesheet" href="styles.css" />
 </head>
-<body class="bg-gray-50">
 
+<body class="bg-gray-50">
   <!-- Header -->
   <header class="fixed top-0 left-0 right-0 bg-white shadow-md z-50">
     <div class="container mx-auto px-4 py-3 flex items-center justify-between">
@@ -57,9 +53,6 @@
     <section id="productContainer" class="bg-white rounded-2xl shadow-lg p-6 md:flex gap-6 items-start">
       <p id="loading" class="text-center w-full py-10 text-lg text-gray-500">Loading product details...</p>
     </section>
-
-    <section id="relatedProducts" class="mt-10"></section>
-    <section id="youMayAlsoLikeContainer" class="mt-10"></section>
   </main>
 
   <!-- Footer -->
@@ -67,17 +60,15 @@
     &copy; 2025 ConceptDash. All rights reserved.
   </footer>
 
-  <!-- App Script -->
+  <!-- Script -->
   <script>
-    // ✅ Your Updated Firebase Config
     const firebaseConfig = {
       apiKey: "AIzaSyB1geQ2jsqrAGw50NLnBncWvxCPD_n5Kqk",
       authDomain: "concept-dash-e1b60.firebaseapp.com",
       projectId: "concept-dash-e1b60",
       storageBucket: "concept-dash-e1b60.appspot.com",
       messagingSenderId: "442954536333",
-      appId: "1:442954536333:web:143a03ca359ba3219bd9c4",
-      measurementId: "G-RYXJVCDF9K"
+      appId: "1:442954536333:web:143a03ca359ba3219bd9c4"
     };
 
     firebase.initializeApp(firebaseConfig);
@@ -85,47 +76,70 @@
 
     const params = new URLSearchParams(window.location.search);
     const productId = params.get("id");
-
     const container = document.getElementById("productContainer");
     const loading = document.getElementById("loading");
 
     if (productId) {
       db.collection("products").doc(productId).get().then(doc => {
-        if (doc.exists) {
-          const product = doc.data();
-          loading.remove();
+        if (!doc.exists) {
+          loading.textContent = "❌ Product not found.";
+          return;
+        }
 
-          let specsHTML = "";
-          if (product.specifications) {
-            specsHTML += `<h3 class="font-bold text-lg mt-6 mb-2">Specifications</h3><ul class="list-disc list-inside text-gray-700">`;
-            product.specifications.split(',').forEach(spec => {
-              specsHTML += `<li>${spec.trim()}</li>`;
-            });
-            specsHTML += `</ul>`;
-          }
+        const product = doc.data();
+        loading.remove();
 
-          container.innerHTML = `
-            <img src="${product.imageUrl}" alt="${product.name}" class="w-full md:w-1/2 h-96 object-contain rounded-2xl border" />
-            <div class="mt-6 md:mt-0 flex-1">
-              <h1 class="text-3xl font-bold mb-2">${product.name}</h1>
-              <p class="text-gray-600 mb-4">${product.description}</p>
-              ${specsHTML}
-              <div class="text-2xl font-bold text-primary mb-6">Ksh ${product.price}</div>
-              <button 
-                id="addToCartBtn"
-                class="bg-primary hover:bg-red-700 text-white px-6 py-3 rounded-button text-lg transition"
-                data-id="${doc.id}"
-                data-name="${product.name}"
-                data-price="${product.price}"
-                data-image="${product.imageUrl}"
-              >
-                <i class="ri-shopping-cart-2-line mr-1"></i> Add to Cart
-              </button>
-            </div>
+        let imageHTML = "";
+        if (product.imageUrl) {
+          imageHTML = `<img src="${product.imageUrl}" alt="${product.name || 'Product Image'}" class="w-full md:w-1/2 h-96 object-contain rounded-2xl border mb-6 md:mb-0" />`;
+        }
+
+        let detailsHTML = `<div class="flex-1">`;
+
+        if (product.name) {
+          detailsHTML += `<h1 class="text-3xl font-bold mb-2">${product.name}</h1>`;
+        }
+
+        if (product.description) {
+          detailsHTML += `<p class="text-gray-600 mb-4">${product.description}</p>`;
+        }
+
+        detailsHTML += `<div class="space-y-1 text-gray-700 mb-6">`;
+        for (let key in product) {
+          if (
+            ["name", "description", "imageUrl"].includes(key) ||
+            product[key] === "" ||
+            typeof product[key] === "object"
+          ) continue;
+
+          detailsHTML += `
+            <p><strong class="capitalize">${key.replace(/_/g, ' ')}:</strong> ${product[key]}</p>
           `;
+        }
+        detailsHTML += `</div>`;
 
-          setTimeout(() => {
-            const btn = document.getElementById("addToCartBtn");
+        if (product.price) {
+          detailsHTML += `<div class="text-2xl font-bold text-primary mb-6">Ksh ${product.price}</div>`;
+        }
+
+        detailsHTML += `
+          <button 
+            id="addToCartBtn"
+            class="bg-primary hover:bg-red-700 text-white px-6 py-3 rounded-button text-lg transition"
+            data-id="${doc.id}"
+            data-name="${product.name}"
+            data-price="${product.price}"
+            data-image="${product.imageUrl}"
+          >
+            <i class="ri-shopping-cart-2-line mr-1"></i> Add to Cart
+          </button>
+        </div>`;
+
+        container.innerHTML = imageHTML + detailsHTML;
+
+        setTimeout(() => {
+          const btn = document.getElementById("addToCartBtn");
+          if (btn) {
             btn.addEventListener("click", () => {
               const product = {
                 id: btn.dataset.id,
@@ -136,10 +150,8 @@
               };
               addToCart(product);
             });
-          }, 0);
-        } else {
-          loading.innerHTML = "❌ Product not found.";
-        }
+          }
+        }, 0);
       });
     }
 
