--- a/checkout.html
+++ b/checkout.html
@@ -26,18 +26,12 @@
   </script>
 
   <!-- Fonts & Icons -->
-  <link rel="preconnect" href="https://fonts.googleapis.com"/>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css"/>
 
-  <!-- Firebase SDK (optional if using Firebase later) -->
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-storage-compat.js"></script>
-
-  <!-- Custom Styles -->
-  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body class="bg-gray-50">
@@ -48,37 +42,31 @@
       <a href="index.html" class="text-xl font-bold text-primary font-pacifico">ConceptDash</a>
       <nav class="flex space-x-6 text-sm items-center">
         <a href="index.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-home-line mr-1"></i>Home</a>
-        <a href="catgry.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-apps-line mr-1"></i>Categories</a>
-        <a href="add.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-add-line mr-1"></i>Add Item</a>
-        <a href="cart.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-shopping-cart-line mr-1"></i>Cart</a>
+        <a href="cart.html" class="flex items-center text-gray-7="ri-shopping-cart-line mr-1"></i>Cart</a>
         <a href="auth.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-user-line mr-1"></i>Login</a>
       </nav>
     </div>
   </header>
 
-  <!-- Main Checkout Content -->
+  <!-- Main Content -->
   <main class="pt-24 px-4 max-w-4xl mx-auto">
     <h1 class="text-2xl font-semibold text-gray-800 mb-6">🧾 Checkout</h1>
 
-    <!-- Payment Instructions -->
+    <!-- M-Pesa Payment Info -->
     <div class="bg-yellow-100 border-l-4 border-yellow-500 p-4 mb-6 rounded">
       <p class="text-gray-800 font-medium">📢 Please make payment before confirming order:</p>
 
       <div class="mt-3 flex items-center justify-between bg-white border rounded p-2">
-        <div>
-          <p class="text-sm text-gray-700"><strong>Paybill:</strong> <span id="paybillText" class="font-bold text-gray-900">542542</span></p>
-        </div>
+        <p class="text-sm text-gray-700"><strong>Paybill:</strong> <span id="paybillText" class="font-bold text-gray-900">542542</span></p>
         <button onclick="copyText('paybillText')" class="text-primary text-sm hover:underline">Copy</button>
       </div>
 
       <div class="mt-2 flex items-center justify-between bg-white border rounded p-2">
-        <div>
-          <p class="text-sm text-gray-700"><strong>Account No.:</strong> <span id="accText" class="font-bold text-gray-900">01903722976150</span></p>
-        </div>
+        <p class="text-sm text-gray-700"><strong>Account No.:</strong> <span id="accText" class="font-bold text-gray-900">01903722976150</span></p>
         <button onclick="copyText('accText')" class="text-primary text-sm hover:underline">Copy</button>
       </div>
 
-      <p class="mt-2 text-xs text-gray-600">Use your phone number or name as reference.</p>
+      <p class="mt-2 text-xs text-gray-600">Use your name or phone number as the reference.</p>
       <p id="copyMsg" class="text-green-600 text-sm mt-1 hidden">✔️ Copied!</p>
     </div>
 
@@ -87,7 +75,7 @@
       <h2 class="text-xl font-bold mb-4 text-gray-700">Delivery Details</h2>
       <form id="checkoutForm" class="grid gap-4">
         <input type="text" name="fullName" required placeholder="Full Name" class="border rounded p-2 w-full" />
-        <input type="text" name="phone" required placeholder="Phone Number" class="border rounded p-2 w-full" />
+        <input type="text" name="phone" required id="phoneInput" placeholder="Phone Number" class="border rounded p-2 w-full" />
         <input type="text" name="location" required placeholder="Delivery Location" class="border rounded p-2 w-full" />
         <textarea name="notes" placeholder="Additional Notes (optional)" class="border rounded p-2 w-full"></textarea>
 
@@ -105,7 +93,7 @@
       <div class="text-right mt-4 text-lg font-bold" id="orderTotal"></div>
     </div>
 
-    <!-- Confirm Button -->
+    <!-- Confirm Order -->
     <div class="text-right mt-6">
       <button type="submit" form="checkoutForm" class="bg-primary text-white px-6 py-2 rounded-button hover:bg-red-600">
         Confirm Order
@@ -120,55 +108,79 @@
 
   <!-- Scripts -->
   <script>
-    // Display cart items
-    const cart = JSON.parse(localStorage.getItem('cart')) || [];
-    const orderSummary = document.getElementById('orderSummary');
-    const orderTotal = document.getElementById('orderTotal');
-    let total = 0;
+    // ✅ Firebase Setup
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "conceptdash.firebaseapp.com",
+      projectId: "conceptdash",
+      storageBucket: "conceptdash.appspot.com",
+      messagingSenderId: "YOUR_SENDER_ID",
+      appId: "YOUR_APP_ID"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
 
-    if (cart.length === 0) {
-      orderSummary.innerHTML = "<p class='text-gray-600'>Your cart is empty.</p>";
-    } else {
-      cart.forEach(item => {
-        const subtotal = item.price * item.quantity;
-        total += subtotal;
+    // 🔄 Fetch Order from Firestore
+    const phoneInput = document.getElementById("phoneInput");
+    const orderSummary = document.getElementById("orderSummary");
+    const orderTotal = document.getElementById("orderTotal");
 
-        orderSummary.innerHTML += `
-          <div class="flex justify-between items-center border-b pb-2">
-            <span>${item.name} (x${item.quantity})</span>
-            <span>KES ${subtotal.toFixed(2)}</span>
-          </div>
-        `;
-      });
+    phoneInput.addEventListener("blur", async () => {
+      const phone = phoneInput.value.trim();
+      if (!phone) return;
 
-      orderTotal.textContent = `Total: KES ${total.toFixed(2)}`;
-    }
+      orderSummary.innerHTML = "Loading order...";
+      orderTotal.textContent = "";
 
-    // Confirm order
-    document.getElementById('checkoutForm').addEventListener('submit', function (e) {
+      try {
+        const query = await db.collection("orders")
+          .where("phone", "==", phone)
+          .orderBy("timestamp", "desc")
+          .limit(1)
+          .get();
+
+        if (query.empty) {
+          orderSummary.innerHTML = "<p class='text-red-500'>No orders found for that phone.</p>";
+          return;
+        }
+
+        const order = query.docs[0].data();
+        let total = 0;
+        orderSummary.innerHTML = "";
+
+        order.items.forEach(item => {
+          const subtotal = item.price * item.quantity;
+          total += subtotal;
+          orderSummary.innerHTML += `
+            <div class="flex justify-between border-b pb-2">
+              <span>${item.name} (x${item.quantity})</span>
+              <span>KES ${subtotal.toFixed(2)}</span>
+            </div>`;
+        });
+
+        orderTotal.textContent = `Total: KES ${total.toFixed(2)}`;
+      } catch (error) {
+        console.error("Fetch failed:", error);
+        orderSummary.innerHTML = "<p class='text-red-500'>Something went wrong.</p>";
+      }
+    });
+
+    // ✅ Submit Confirm Button
+    document.getElementById("checkoutForm").addEventListener("submit", (e) => {
       e.preventDefault();
-
-      const paid = document.getElementById('paidCheck').checked;
-      if (!paid) {
-        alert("⚠️ Please confirm that you have made the payment.");
+      if (!document.getElementById("paidCheck").checked) {
+        alert("Please confirm you paid via M-Pesa.");
         return;
       }
 
-      const formData = new FormData(this);
+      const formData = new FormData(e.target);
       const details = Object.fromEntries(formData.entries());
 
-      alert("✅ Order placed!\n\n" +
-        "Name: " + details.fullName +
-        "\nPhone: " + details.phone +
-        "\nLocation: " + details.location +
-        "\n\nTotal: KES " + total.toFixed(2) +
-        "\n\nPlease ensure you paid to Paybill: 542542, Acc: 01903722976150");
-
-      localStorage.removeItem('cart');
+      alert(`✅ Order confirmed for ${details.fullName}.\nDelivery to ${details.location}\nThank you!`);
       window.location.href = "index.html";
     });
 
-    // Copy to clipboard
+    // 📋 Copy to Clipboard
     function copyText(id) {
       const text = document.getElementById(id).innerText;
       navigator.clipboard.writeText(text).then(() => {
@@ -178,6 +190,5 @@
       });
     }
   </script>
-
 </body>
-        </html>
+    </html>
